Fix color contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,8 +89,8 @@
 	--gray-999: #090b11;
 
 	--accent-light: #3EB489;
-	--accent-regular: #1c7e5a;
-	--accent-dark: #3EB489;
+	--accent-regular: #188e63;
+	--accent-dark: #115a3f;
 	--accent-overlay: hsla(280, 89%, 67%, 0.33);
 	--accent-subtle-overlay: #92e2c532;
 	--accent-text-over: var(--gray-0);
